mobile.css
/* Add a black background color to the top navigation */
.topnav {
    background-color: #c9ceff;
    overflow: hidden;
    position: relative;

    text-transform: uppercase;
    font-weight: 600;
}

.topnavfixed{
    position: fixed;
    overflow: hidden;
    width: 100%;
}

/* Style the links inside the navigation bar */
.topnav a {
    float: left;
    color: #252525;
    text-align: center;
    padding: Calc(2*14px) Calc(2*16px);
    text-decoration: none;
    font-size: Calc(2*17px);
}

/* Change the color of links on hover */
.topnav a:hover {
    color: black;
}

/* Add a color to the active/current link */
.topnav a.active {
  background-color: #252525;
  color: white;
}

@font-face {
  font-family: Infra-Regular; /* This actually is the current font */
  src: url(Roboto-Regular.ttf);
}

@font-face {
  font-family: Infra-Bold; /* This actually is the current font */
  src: url(Roboto-Bold.ttf);
}

p {
    font-family: Infra-Regular;
    color: #E2190C;
    font-size: 250%;
    padding-left: 1%;
    hyphens: auto
}

b {
    font-family: Infra-Bold;
}

/* link color */
a {
    font-family: Infra-Regular;
    color: #E2190C;
    text-decoration: none;
}

h1, h2, h3, h4, h5, h6 {
    font-family: Infra-Bold;
    color: #c9ceff;
    padding-left: 1%;
    text-decoration: none;
    font-weight: bold;
    font-size: 100%;
    line-height: 1.25;
}

h1, .h1 {
    font-size: 3.5rem;
    text-decoration: none;
    font-weight: bold;
    line-height: 1.25;
    padding-left: 2%;
    color: #c9ceff;
}

h2, .h2 {
    font-size: 3.25rem;
    text-decoration: none;
    font-weight: bold;
    line-height: 1.25;

    color: #c9ceff;
}

h3, .h3 {
    font-size: 2.75rem;
    text-decoration: none;
    font-weight: bold;
    line-height: 1.25;
    color: #ffffff;
}

h4, .h4 {
    font-size: 2.5rem;
    font-weight: bold;
    padding-left: 2%;
    line-height: 1.25;

    color: #ffffff;
}

h5, .h5 {
    font-size: 1.25rem;
    text-decoration: none;
    font-weight: bold;
    line-height: 1.25;
}

h6, .h6 {
    font-size: 1rem;
    text-decoration: none;
    font-weight: bold;
    line-height: 1.25;
}


/* changes the backgrounds color */
body {
  background-color: #252525;
}


/* fix object to the bottom right side of the screen */
.fixright{
   position: fixed;
   bottom: 0px;
   right: 0px;
}

/* fix object to the bottom left side of the screen */
.fixleft{
   position: fixed;
   bottom: 0px;
   left: 0px;
}

/* remove Margin from Body */
body{
    margin:0;
}

.desktoponly{
    display:none;
}

.aboutmetext .indextext{
    font-size: 275%;
}

.feedsTopPadding{
    padding-top: 20%
}

.footer {
  position: fixed;
  bottom: 0;
}

input{
    float: right;
    color: #ffff;
    text-align: center;
    padding: Calc(2*14px) Calc(2*16px);
    text-decoration: none;
    font-size: Calc(2*17px);
    background-color: #252525;
    overflow: hidden;
    outline: none;
    border: none;
    display: none;
}

input:hover {
  background-color: #ffffff;
  color: black;
}

#leftPadding {
    padding-left: 2%
}

#align {
    text-align: center
}

#Dutzen {
    text-align: center
}

#padding {
    padding-right: 2%;
    padding-left: 2%;
}

#liste {
    text-align: center;
    line-height: 1,5;
}

#blogEintrag {
    padding-right: 2%;
    padding-left: 2%;
    font-size: 350%;
}

.blogEintragNav{
    position: fixed;
    z-index: 500;
    width: 100%;
}

#kontakteMobile{
    font-size: 200%;
}

#offscreenMobile{
    position: absolute;
    left: -5000px;
}

#indeximg {
    max-width: 60%
}

#aboutmetext {
    font-size: 350%;
    padding-left: 2%;
    padding-right: 2%;
}

#indextext {
    font-size: 125%
}

#blogEintrag {
    font-style: normal;
}

#padding {
    text-align: center;
}

#bottomTextIndex{
    color: #ffffff;
}

